--- a/scip_03_sudoku.ipynb
+++ b/scip_03_sudoku.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "from tqdm import tqdm, trange\n",
     "\n",
-    "np.random.seed(0)"
+    "np.random.seed(0)\n",
+    "\n",
+    "# http://profs.sci.univr.it/~rrizzi/classes/PLS2015/sudoku/doc/497_Olszowy_Wiktor_Sudoku.pdf"
    ]
   },
   {
